--- a/mode-settings/dired-settings.org
+++ b/mode-settings/dired-settings.org
@@ -11,74 +11,12 @@
  dired-use-ls-dired t)
 (setq dired-listing-switches "-al --group-directories-first")
 
-;; (use-package all-the-icons-dired :straight t
-;;   :hook (dired-mode-hook . all-the-icons-dired-mode))
-;; (defface all-the-icons-dired-dir-face
-;;   '((((background dark)) :foreground "white")
-;;     (((background light)) :foreground "dark blue"))
-;;   "Face for the directory icon"
-;;   :group 'all-the-icons-faces)
-
-;; (defun icons-when-local-hook ()
-;;   "Special hook for activating when local"
-;;   (interactive)
-;;   (when (not (file-remote-p (dired-get-filename))) (all-the-icons-dired-mode t)))
-
-;; ;; (defun icons-when-local-hook (args)
-;; ;;   (when (not (file-remote-p (dired-get-filename))) (print "Is local!"))
-;; ;;   )
-;; ;; (icons-when-local-hook)
-
-;; (defun my-all-the-icons-dired--refresh ()
-;;   "Display the icons of files in a dired buffer."
-;;   (all-the-icons-dired--remove-all-overlays)
-;;   ;; NOTE: don't display icons in remote folders or the folder has too many items
-;;   (if (and (not (file-remote-p default-directory))
-;;            (<= (count-lines (point-min) (point-max)) 1000))
-;;       (save-excursion
-;;         (goto-char (point-min))
-;;         (while (not (eobp))
-;;           (when (dired-move-to-filename nil)
-;;             (let ((file (dired-get-filename 'relative 'noerror)))
-;;               (when file
-;;                 (let ((icon (if (file-directory-p file)
-;;                                 (all-the-icons-icon-for-dir file
-;;                                                             :face 'all-the-icons-dired-dir-face
-;;                                                             :height 0.9
-;;                                                             :v-adjust all-the-icons-dired-v-adjust)
-;;                               (all-the-icons-icon-for-file file :height 0.9 :v-adjust all-the-icons-dired-v-adjust))))
-;;                   (if (member file '("." ".."))
-;;                       (all-the-icons-dired--add-overlay (point) "  \t")
-;;                     (all-the-icons-dired--add-overlay (point) (concat icon "\t")))))))
-;;           (forward-line 1)))
-;;     (message "Remote folder or too many items.")))
-;;       (advice-add #'all-the-icons-dired--refresh :override #'my-all-the-icons-dired--refresh)
-
-;; (add-hook 'dired-mode-hook 'all-the-icons-dired-mode)
-
-;; Add dot files and directories first
-;; (setq dired-listing-switches "-laGh1v")
-
-;; ;; Change time format
-;; (setq ls-lisp-format-time-list  '("%Y-%m-%d %a %H:%M"))
-;; (setq ls-lisp-use-localized-time-format t)
-
 ;; wdired settings
-(straight-use-package 'wdired)
-(require 'wdired)
-(setq wdired-allow-to-change-permissions t)
-(define-key dired-mode-map (kbd "e") 'wdired-change-to-wdired-mode)
-(define-key dired-mode-map (kbd "M-G") nil)
-
-
-;; (straight-use-package 'dired-hacks)
-;; (require 'dired-hacks)
-
-;; (use-package dirvish
-;;   :straight t
-;;   :init
-;;   ;; Let Dirvish take over Dired globally
-;;   (dirvish-override-dired-mode))
-
-(provide 'dired-settings)
+(use-package
+ wdired
+ :straight t
+ :config
+ (setq wdired-allow-to-change-permissions t)
+ (define-key dired-mode-map (kbd "e") 'wdired-change-to-wdired-mode)
+ (define-key dired-mode-map (kbd "M-G") nil))
 #+END_SRC
